--- a/clientes.html
+++ b/clientes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OP Testing</title>
-    <link rel="icon" href="/icons8-matemáticas-40.png">
+    <link rel="icon" href="/icon.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
@@ -35,11 +35,6 @@
             </form>
             <div id="resultados">
                 
-            </div>
-            <div class="mt-5 mb-3" style="text-align: center;">
-                <a href="historial.html" style="text-decoration: none; color: #5F6C7B;">
-                    <button class="btn btn-primary"><span class="mx-3">Ver hisrotial de operaciones</span></button>
-                </a>
             </div>
             <br>
         </div>
