Corrección de la suma

--- a/clientes.html
+++ b/clientes.html
@@ -52,7 +52,7 @@
                 num1: data.num1,
                 num2: data.num2,
                 
-                suma: data.num1 + data.num2,
+                suma: parseFloat(data.num1) + parseFloat(data.num2),
                 resta: data.num1 - data.num2,
                 multiplicacion: data.num1 * data.num2,
                 division: data.num1 / data.num2
