--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
+<style>
+    .op::-webkit-scrollbar{
+        width: 7px;
+    }
+</style>
 <body style="background: #5F6C7B;">
     <nav class="navbar mx-5 my-4">
         <h1>OP Testing - Administrador</h1>
@@ -18,11 +23,11 @@
     </nav>
     
     <section style="background: #FF8298; width:fit-content; margin: auto; border-radius: 20px; font-size: large;">
-        <div class="m-5">
+        <div style="margin-left: 30px;">
             <br>
             <h1 style="text-align: center;">Historial de operaciones</h1>
             <br>
-            <div id="op"></div>
+            <div class="op" id="op" style="margin-right: 20px; height: 400px; overflow: auto; border-radius: 20px;"></div>
             <br>
             
         </div>
